fix navbar li on mobile view 900px

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-   padding: 30px 10%;
+  padding: 30px 10%;
   height: 50px;
   z-index: 5;
   background-color: rgb(36, 35, 35);
@@ -45,6 +45,17 @@
 .nav-mob-open{
   display: none;
 }
+
+@media screen and (max-width: 1100px) {
+  .navbar .nav-menu{
+    gap: 20px;
+  }
+
+  .navbar h2{
+    font-size: 1.5rem;
+  }
+}
+
 
 @media screen and (max-width: 800px) {
   .navbar{
